Experimental numba feature.

--- a/qutip/configspec.ini
+++ b/qutip/configspec.ini
@@ -8,3 +8,4 @@ num_cpus = integer(default=0)
 debug = boolean(default=False)
 log_handler = string(default=default)
 colorblind_safe = boolean(default=False)
+numba = boolean(default=False)
